2005-07-01  Hamish Lawson  <hbl@st-andrews.ac.uk>

	* src/pydo/drivers/oracleconn.py: use fetchall (rather than iterating over
	cursor) when resultset doesn't contain LOBs; replace OracleResultSet 
    class with OracleDBI.field_values method.

2005-07-01  Jacob Smullyan  <smulloni@smullyan.org>

	* ACKNOWLEDGEMENTS: added Robin Brandt, and added notes detailing
	contributions. 

2005-06-29  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/base.py (PyDO.getSome): tolerate group by statements in
	sql strings.

	* tests/test_base.py (test_group1): test for toleration of group
	by statements.

2005-06-27  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/drivers/psycopgconn.py: autocommit implementation for
	psycopg version 1.

	* tests/test_dbi.py (test_autocommit2): two autocommit tests.

	* doc/manual.rst: remove reference to a non-existent class
	attribute; cleaned up references to features eliminated in the
	alpha release phase.

	* tests/test_multifetch.py (test_fetch2): another fetch test.

	* tests/test_guesscache.py (test_guesscache1): test for basic
	guesscache functionality.

	* src/pydo/drivers/psycopgconn.py (PsycopgDBI.getSequence): only
	log that the sequence name is being inferred when self.verbose.

	* tests/test_base.py (test_unique3) test for _matchUnique.

	* src/pydo/base.py (PyDO._matchUnique): fixing brain-dead
	implementation, which was dropping some unique constraints.

2005-06-26  Jacob Smullyan  <smulloni@smullyan.org>

	* tests/test_base.py (test_refresh2): another refresh test in
	attempt to find Faber's bug.

2005-06-25  Jacob Smullyan  <smulloni@smullyan.org>

	* TODO: put iterSome in the TODO for 1.1.  (It is being deferred
	because of it may require a generator that can do resource
	cleanup.)

	* tests/fixture.py: another table/class ("E").

	* tests/test_base.py (test_project8): test for when projections
	include columns not included in the base class.  Commented out is 
	Faber's sneaky aggregate trick.
